--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "antd": "^5.21.4",
     "axios": "^1.7.7",
     "braintree-web-drop-in-react": "^1.2.1",
